--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,7 +1,12 @@
+#root {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: smaller;
+}
+
 div.demo {
     border: 1px solid;
     padding: 0.1em 0 1em 0.4em;
-    border-radius: 10px;
+    border-radius: 5px;
     margin-bottom: 5px;
 }
 
